<resources>
    <string name="app_name">YESIST12</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="timeline">Timeline</string>
    <string name="tracks">Tracks</string>
    <string name="about_team">About Team</string>
    <string name="more">More</string>
    <string name="short_random_text">ARK Invest, an investment management company focused solely on disruptive innovation, has done a lot of research on the foundational innovations that will shape our world in the next few decades.</string>
    <string name="random_text">ARK Invest, an investment management company focused solely on disruptive innovation, has done a lot of research on the foundational innovations that will shape our world in the next few decades. They refer to these foundational and disruptive innovations as innovation platforms. While information technology and the ARK has identified five innovation platforms that they driving costs down, creating huge demand growth across virtually all sectors and geographies.</string>
    <string name="android_team">Android Team</string>
    <string name="web_development_team">Web Development Team</string>
    <string name="gal_gadot">Gal Gadot</string>
    <string name="volunteer">Volunteer</string>
    <string name="nolan">Nolan</string>
    <string name="first_prize">1st Prize - TBD</string>
    <string name="second_prize">2nd Prize - TBD</string>
    <string name="track_name">Volleyball</string>
    <string name="profile_name">Christopher Nolan</string>
    <string name="profile_location">Singapore</string>
    <string name="our_vission_text">Our Vission</string>
    <string name="our_mission_text">Our Mission</string>
    <string name="yesist_desc">A program under ASIST - Augmented Social Innovations through Science and Technology</string>
    <string name="ieee_yesist_12_text">IEEE YESIST12</string>
    <string name="year_text">2021</string>
    <string name="second_card_text">Empower and encourage the engineering minds to work for the social cause through: \n- Organising Competitions for young engineering graduates, engineering students and school students in the themes aligned with the vision. \n- Recognising the engineering educators for their service to the society \n- Creating a strong network for mentors and mentees from industry and academia. \n- Encouraging Interdisciplinary work in creating solutions for social issues.</string>
    <string name="first_card_text">To instill social responsibility and ethics as a continuing education in the young minds through activities and encourage service oriented engineering practice.</string>
    <string name="co_chair_maker_fair">Co-Chair | Maker Fair</string>
    <string name="co_chair_junior_einstein">Co-Chair | Junior Einstein</string>
    <string name="co_chair_we_power">Co-Chair | WePOWER</string>
    <string name="co_chair_special_track">Co-Chair | Special Track</string>
    <string name="co_chair_innovation_challenge">Co-Chair | Innovation Challenge</string>
    <string name="co_chair_pro_pub">Co-Chair | Promotion and Publicity</string>
    <string name="co_chair_content_dev">Co-Chair | Content Development</string>
    <string name="co_chair_section_collab">Co-Chair | Section Collaboration</string>
    <string name="co_chair_website">Co-Chair | Website</string>
    <string name="co_chair_partnership">Co-Chair | Partnership</string>
    <string name="chair_career_fair">Chair | Career Fair</string>
    <string name="general_chair">Ramalatha Marimuthu</string>
    <string name="secretary">Ketha Nikitha</string>
    <string name="maker_fair_co_chair_1">W.M. Dev Sugandhika Jayalath</string>
    <string name="maker_fair_co_chair_2">Mian Junaid Manzoor</string>
    <string name="junior_einstein_co_chair_1">R. Navaneetha Krishnan</string>
    <string name="junior_einstein_co_chair_2">Pooja Sharma K</string>
    <string name="we_power_co_chair_1">Preethy V. Warrier</string>
    <string name="we_power_co_chair_2">Ramneek Kalra</string>
    <string name="special_track_co_chair_1">Vydeki Vijayakumar </string>
    <string name="special_track_co_chair_2">Indhumathi Gunasekaran </string>
    <string name="innovation_challenge_co_chair_1">Tasnim Binte Shawkat</string>
    <string name="innovation_challenge_co_chair_2">Bindu A. Thomas</string>
    <string name="promotion_and_publicity_co_chair_1">Aishwarya Bandla</string>
    <string name="promotion_and_publicity_co_chair_2">Nithyavathy N</string>
    <string name="partnerships_co_chair">M. Alagu Meenakshi</string>
    <string name="website_chair_1">Ashvanth Narayanan</string>
    <string name="website_co_chair_2">Arangan Rishikesh T</string>
    <string name="content_development_chair_1">Janani Ramachandran</string>
    <string name="content_development_chair_2">Bharathi Ramesh</string>
    <string name="section_collaboration_chair_1">A. Darwin Jose Raju</string>
    <string name="section_collaboration_chair_2">R. Ankayarkanni</string>
    <string name="career_fair_chair">Nageswara Gupta</string>
    <string name="desgin_development_chair">Tahmim Hossain</string>
    <string name="dates_pilot">Dates for Pilot</string>
    <string name="direct_entry">Direct Entry</string>
    <string name="reg_fee">Reg. Fee</string>
    <string name="awards">Awards</string>
    <string name="imp_dates">Important Dates</string>
    <string name="rules_tracks">Rules for the track</string>
    <string name="abs_sel_proc">Abstract Selection Process</string>
    <string name="innovation">
        Innovation Challenge is an international project competition established by IEEE Madras Section and IEEE Education Society to encourage the participants to come up with innovative ideas for the social and humanitarian issues. Here YESIST12 acts as a platform to bridge the gap between the engineers and visonaries to contribute to the society with innovations.\n\nThis exceptional platform conducts competition in two stages. The preliminary stage is conducted across Asian and African countries and the team that tops the round wins a chance to compete globally to address humanitarian and social issues like poverty, famine, special needs, women safety, healthcare, disaster management, and many more.
    </string>
    <string name="innov_abstract">
        1. Novelty\n2. Clarity\n3. Feasibility and Practicability\n4. User Experience\n5. Scale of impact\n6. Sustainability\n7. Potential for future work progression.
    </string>
    <string name="innov_rules">
        1. Under the Innovation Challenge theme, the projects can be Mobile Apps or Computer Based or IoT based.
        \n\n2. In addition to developing the projects, the developers should ensure that their creation follows the international industry level technical standards set by the various agencies and approved universally. The evaluation criteria will be as follows:
        \na. Creativity
        \nb. Application
        \nc. Relevance to the theme
        \nd. Application of Standards
        \ne. Deliverability
        \n\n3. Students with drive and passion towards helping humanity are invited to register for the competition. The first round of the competition is to be held all over Asia in the pilots selected on the basis of registration. The winning teams will be called for the final round to be organised in September 2021.
    </string>
    <string name="innov_dates_pilot">
        1. Registration of Pilot Institutions closes: April 25, 2021
        \n2. Registration of Teams with Pilot Institution closes: As indicated by the Pilot
        \n3. Date for Preliminary to be conducted by Pilot Institution: March 2021 to July 2021
        \n4. Finals and Conference: September 2021
    </string>
    <string name="innov_direct_entry">
        1. Call for abstracts: To Be Updated
        \n2. Intimation to selected teams &amp; Registration: To Be Updated
        \n3. Registration closes: To Be Updated
        \n4. Finals and Conference: September 2021
    </string>
    <string name="innov_reg_fee">
        Registration Fee for the final round: To be Updated
    </string>
    <string name="innov_awards">
        1. Prize Money will be announce later.
        \n2. Vibrant Pilot Awards
        \n3. Training Opportunities
        \n4. Certificates will be provided for the participants
    </string>
    <string name="maker_fair">
        MakerFair is a unique platform with opportunities for the innovators, makers, and creators to showcase their marvelous products to the international community. Teams with enthusiasm and determination of inventing and showcasing their innovative ideas which are capable from ideation to commercialization are invited to register for this event.
        \n\nIn 2021, MakerFair Track have goals to achieve maximum goals which can be helpful to the world regarding the problems World has been facing in recent times under the UN Sustainable Development Goals.
    </string>
    <string name="maker_abstract">
        1. Problem Definition and User Definition\n2. Solution and Implementation\n3. Innovation\n4. Potential for social impact and commercialization purposes\n5. Presentation and Project to Product level
    </string>
    <string name="maker_rules">
        1. Team size: Maximum of 4 members.
        \n2. Team members may come from different academic institutions/industries and from different countries. Only the registered members of the team will be given certificates. Mentor names should also accompany the team registration.
        \n3. Teams shall display their working projects in the venue, explain and demonstrate to the audience and evaluators.
        \n4. The evaluation will be based on the following criteria: Challenge, Innovation, Usability, and Extendibility.
        \n5. Teams are locked along with abstract submission, and no further changes to team membership and mentors can be made after that.
        \n6. Each team is solely responsible for its own cooperation and teamwork.
    </string>
    <string name="maker_dates_pilot">
        1. Call for Abstracts: May 1, 2021
        \n2. Last Date for Abstract Submission: May 31, 2021
        \n3. Notification of Acceptance: June 1, 2021
        \n4. Registration to the finals: August 15, 2021
    </string>
    <string name="maker_reg_fee">
        Registration Fee for the final round: To be Updated
    </string>
    <string name="maker_awards">
        1. Prize Money will be announce later.
        \n2. Certificates will be provided for the participants
    </string>
    <string name="einstein">
        Junior Einstein Track acts as a catalyst for innovation and provides a transformative opportunity to broaden the horizon of knowledge among the young curious minds. This event makes effort to harness the creative submissions and innovative spirit towards Scientific and technological ideas/innovations from the school students of age 12 to 17 and to get rooted as one of the foremost project competition in the global arena developing a robust scientific temper among the youth.\n
    </string>
    <string name="month_year">March 2021</string>
    <string name="completed">Completed</string>
    <string name="introductory_meeting">Introductory Meeting</string>
    <string name="join">Join</string>
    <string name="about">About</string>
    <string name="mon">Mon</string>
    <string name="_07">07</string>
    <string name="_8_00_am">8:00 AM</string>
    <string name="timezone_kolkata_india">Timezone : Kolkata, India</string>
</resources>