<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/separator_top"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="5dp"
        android:background="#EEEEEE"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/date"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:text="@string/_07"
        android:gravity="bottom"
        android:fontFamily="@font/poppins_extra_bold"
        android:textSize="30sp"
        android:textColor="#676969"
        app:layout_constraintTop_toBottomOf="@+id/separator_top"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="25dp"
        android:text="@string/mon"
        android:textStyle="bold"
        android:fontFamily="@font/nunitoregular"
        android:textSize="18sp"
        android:textColor="#676969"
        app:layout_constraintTop_toTopOf="@+id/date"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/event_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="9dp"
        android:backgroundTint="#F6F5F5"
        app:cardCornerRadius="10dp"
        android:elevation="100dp"
        app:layout_constraintTop_toBottomOf="@+id/separator_top"
        app:layout_constraintStart_toEndOf="@id/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="13dp"
                android:text="@string/_8_00_am"
                android:textColor="#01579B"
                android:textStyle="bold"
                android:fontFamily="@font/nunito_extrabold"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/status"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="87dp"
                android:gravity="center"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:fontFamily="@font/nunitoregular"
                android:textStyle="bold"
                android:text="@string/completed"
                android:textColor="#01579B"
                android:textSize="11sp"
                android:textAllCaps="false"
                android:background="@drawable/ic_completed_tv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


            <TextView
                android:id="@+id/event_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="13dp"
                android:paddingEnd="24dp"
                android:text="@string/introductory_meeting"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/nunito_extrabold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/start_time"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/join"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="13dp"
                app:backgroundTint="#EA0000"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                app:cornerRadius="70dp"
                android:text="@string/join"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_title" />

            <Button
                android:id="@+id/about_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="13dp"
                android:layout_marginBottom="15dp"
                app:strokeColor="#676969"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                app:cornerRadius="70dp"
                android:text="@string/about"
                android:textColor="#676969"
                android:textSize="14sp"
                android:textAllCaps="false"
                app:layout_constraintStart_toEndOf="@id/join"
                app:layout_constraintTop_toBottomOf="@+id/event_title"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>